<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:icon="@drawable/ic_home"
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:visible="true"
        android:enabled="true"/>


    <item android:icon="@drawable/ic_favourite"
        android:id="@+id/menu_fav"
        android:title="@string/favourite"
        android:visible="true"
        android:enabled="true"/>


    <item android:icon="@drawable/ic_chat"
        android:id="@+id/menu_chat"
        android:title="@string/chat"
        android:visible="true"
        android:enabled="true"/>


    <item android:icon="@drawable/ic_account"
        android:id="@+id/menu_account"
        android:title="@string/account"
        android:visible="true"
        android:enabled="true"/>




</menu>