<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment"
    android:background="@color/light_grey"
    android:id="@+id/profile_page">


    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="188dp"
        android:src="@drawable/ic_account"
        app:civ_border_color="#FFF"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/enter_name"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/enter_email"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/update"
        android:textColor="#F5F5F5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintVertical_bias="0.049" />


        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_logout"
        android:backgroundTint="@color/black"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>