<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_account"
                app:civ_border_color="#FFF"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/profile_image"
                android:text="Hi Developer"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_search"
                    android:drawableStart="@drawable/ic_search"
                    android:elevation="10dp"
                    android:hint="@string/search_here"
                    android:padding="16dp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_category"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:padding="4dp"
                android:background="@drawable/linear_bg">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_margin="4dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_home_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/home_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/home"
                            android:scaleType="centerCrop"/>

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_home_image"
                        android:layout_alignStart="@+id/card_home_image"
                        android:layout_alignEnd="@+id/card_home_image"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:maxLines="1"
                        android:text="@string/homes"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_margin="4dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_flat_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/flat_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/flat"
                            android:scaleType="centerCrop"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_flat_image"
                        android:layout_alignStart="@+id/card_flat_image"
                        android:layout_alignEnd="@+id/card_flat_image"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="16dp"
                        android:maxLines="1"
                        android:text="@string/flats"
                        android:textStyle="bold"
                        android:textSize="20sp"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_margin="4dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_room_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:cardCornerRadius="10dp">


                        <ImageView
                            android:id="@+id/room_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/room"
                            android:scaleType="centerCrop"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_room_image"
                        android:layout_alignStart="@+id/card_room_image"
                        android:layout_alignEnd="@+id/card_room_image"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="9dp"
                        android:maxLines="1"
                        android:text="@string/room"
                        android:textStyle="bold"
                        android:textSize="20sp"/>


                </RelativeLayout>









            </LinearLayout>

            <TextView
                android:id="@+id/top_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Top Deals"
                android:layout_below="@+id/linear_category"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_deal_RV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_deal"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp">

            </androidx.recyclerview.widget.RecyclerView>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>